# ikode

./: .gitignore  CLAUDE.md  Cargo.toml  INSTRUCTIONS.md  README.md
gaise/: .gitignore  API_DOCUMENTATION.md  README.md  gaise_postman_collection.json
gaise/gaise-api/: Cargo.toml
gaise/gaise-api/src/: lib.rs  main.rs
gaise/gaise-api/tests/: api_tests.rs
gaise/gaise-chatbot/: Cargo.toml
gaise/gaise-chatbot/src/: main.rs
gaise/gaise-client/: Cargo.toml  README.md
gaise/gaise-client/src/: lib.rs
gaise/gaise-client/tests/: client_tests.rs  logger_test.rs  stream_filter_test.rs
gaise/gaise-core/: Cargo.toml
gaise/gaise-core/src/: lib.rs  logging.rs
gaise/gaise-core/src/contracts/: gaise_content.rs  gaise_embeddings_request.rs  gaise_embeddings_response.rs  gaise_generation_config.rs  gaise_instruct_request.rs  gaise_instruct_response.rs  gaise_instruct_stream_response.rs  gaise_message.rs  gaise_tool_call.rs  gaise_tool_config.rs  gaise_tool_parameter.rs  gaise_usage.rs  generative_ai_text_choice.rs  mod.rs
gaise/gaise-core/tests/: main.rs  streaming_tests.rs
gaise/gaise-provider-anthropic/: Cargo.toml
gaise/gaise-provider-anthropic/src/: anthropic_client.rs  lib.rs
gaise/gaise-provider-anthropic/src/contracts/: models.rs
gaise/gaise-provider-anthropic/tests/: mapping_tests.rs
gaise/gaise-provider-bedrock/: Cargo.toml
gaise/gaise-provider-bedrock/src/: bedrock_client.rs  lib.rs
gaise/gaise-provider-bedrock/tests/: mapping_tests.rs
gaise/gaise-provider-ollama/: Cargo.toml
gaise/gaise-provider-ollama/src/: lib.rs  ollama_client.rs
gaise/gaise-provider-ollama/src/contracts/: models.rs
gaise/gaise-provider-ollama/tests/: integration_tests.rs  mapping_tests.rs
gaise/gaise-provider-openai/: Cargo.toml
gaise/gaise-provider-openai/src/: lib.rs  openai_client.rs
gaise/gaise-provider-openai/src/contracts/: models.rs
gaise/gaise-provider-openai/tests/: mapping_tests.rs
gaise/gaise-provider-vertexai/: Cargo.toml
gaise/gaise-provider-vertexai/src/: lib.rs  mod.rs  vertexai_client.rs  vertexai_client_threaded.rs
gaise/gaise-provider-vertexai/src/contracts/: google_claims.rs  mod.rs  models.rs  service_account.rs  service_account_info.rs
gaise/gaise-provider-vertexai/tests/: mapping_tests.rs
ikode-cli/: Cargo.toml
ikode-cli/src/: main.rs  sys-prompt.md  tools.rs
ikode-cli/tests/: README.md  integration_tests.rs  path_validation_tests.rs  tool_tests.rs
ikode-cli/tests/common/: mod.rs
