[package]
name = "gaise-api"
version = "0.1.0"
edition = "2024"

[dependencies]
gaise-core = { path = "../gaise-core" }
gaise-client = { path = "../gaise-client" }

axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
axum-extra = { version = "0.9" }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
http = "1.1"
mime = "0.3"