[package]
name = "gaise-chatbot"
version = "0.1.0"
edition = "2021"

[dependencies]
gaise-core = { path = "../gaise-core" }
gaise-provider-ollama = { path = "../gaise-provider-ollama" }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
text_io = "0.1"
indicatif = "0.17"
