[package]
name = "gaise-client"
version = "0.1.0"
edition = "2024"

[dependencies]
gaise-core = { path = "../gaise-core" }
gaise-provider-ollama = { path = "../gaise-provider-ollama", optional = true }
gaise-provider-vertexai = { path = "../gaise-provider-vertexai", optional = true }
gaise-provider-openai = { path = "../gaise-provider-openai", optional = true }
gaise-provider-bedrock = { path = "../gaise-provider-bedrock", optional = true }

async-trait = "0.1.89"
tokio = { version = "1.32.0", features = ["full"] }
futures-util = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[features]
default = ["ollama", "vertexai", "openai", "bedrock"]
ollama = ["dep:gaise-provider-ollama"]
vertexai = ["dep:gaise-provider-vertexai"]
openai = ["dep:gaise-provider-openai"]
bedrock = ["dep:gaise-provider-bedrock"]
