[package]
name = "gaise-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
serde_bytes = "0.11.19"
async-trait = "0.1.89"
mockall = "0.14.0"
futures-util = "0.3.31"

[dev-dependencies]
tokio = { version = "1.43.0", features = ["full"] }