[package]
name = "gaise-provider-anthropic"
version = "0.1.0"
edition = "2024"

[dependencies]
gaise-core = { path = "../gaise-core"}

serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
async-trait = "0.1.89"

reqwest = { version = "0.13.2", features = ["stream", "json"] }
futures-util = "0.3.31"
base64 = "0.22.1"
