[package]
name = "gaise-provider-bedrock"
version = "0.1.0"
edition = "2024"

[dependencies]
gaise-core = { path = "../gaise-core"}

serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
async-trait = "0.1.89"
tokio = { version = "1.32.0", features = ["full"] }
futures-util = "0.3.31"
base64 = "0.22.1"
aws-config = { version = "1.1", features = ["behavior-version-latest"] }
aws-sdk-bedrockruntime = "1.0"
aws-smithy-types = "1.0"
bytes = "1.0"
async-stream = "0.3"
