[package]
name = "gaise-provider-vertexai"
version = "0.1.0"
edition = "2024"

[dependencies]
gaise-core = { path = "../gaise-core"}

serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
serde_bytes = "0.11.19"
async-trait = "0.1.89"

reqwest = { version = "0.12.26", features = ["stream"] }
chrono = "0.4"
jsonwebtoken = "9.2.0"
tokio = { version = "1.32.0", features = ["full"] }
futures-util = "0.3.31"
base64 = "0.22.1"